Fleshing out Scale and Grid